--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Cutive+Mono" rel="stylesheet">
     <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <title>DoDaS</title>
   </head>
   <body>
