--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,13 +3,17 @@ body {
   font-family: monospace;
 }
 
-h1, h2, h3, h4 {
+h1, h2, h3 {
   font-weight: bold;
+  padding: 10px;
 }
 
 h2 {
   font-size: 3em;
-  padding: 10px;
+}
+
+h3 {
+  font-size: 2em;
 }
 
 
