--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,9 @@
 body {
-  color: dodgerblue;
   font-family: monospace;
+}
+
+body, a {
+  color: dodgerblue;
 }
 
 h1, h2, h3 {
@@ -18,6 +21,14 @@ h3 {
 
 i {
   font-style: italic;
+}
+
+a:visited {
+  color: dodgerblue;
+}
+
+a {
+  cursor: pointer;
 }
 
 
@@ -58,8 +69,4 @@ th:hover {
 
 td {
   font-family: 'Cutive Mono', monospace;
-}
-
-.link-cell {
-  cursor: pointer;
 }
