--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,6 +8,8 @@
     <title>DoDaS</title>
   </head>
   <body>
-    <%= yield %>
+    <div id="container">
+      <%= yield %>
+    </div>
   </body>
 </html>
