--- a/views/databases/show.erb
+++ b/views/databases/show.erb
@@ -1,2 +1,2 @@
-<h2><%= @db_name %></h2>
+<span class="breadcrumb"><a href="/databases">databases</a> / <span class="breadcrumb-current"><%= @db_name %></span></span>
 <%= @tables_html %>
