minor changes for source readability

--- a/views/seeds/index.erb
+++ b/views/seeds/index.erb
@@ -1,2 +1,8 @@
-<span class="breadcrumb"><a href="/databases">databases</a> / <a href="/databases/<%= @db_name %>"><%= @db_name %></a> / <%= @table_name %> / <span class="breadcrumb-current">seeds</span></span>
+<span class="breadcrumb">
+  <a href="/databases">databases</a> /
+  <a href="/databases/<%= @db_name %>"><%= @db_name %></a> /
+  <%= @table_name %> /
+  <span class="breadcrumb-current">seeds</span>
+</span>
+
 <%= @table_html %>
