--- a/views/databases/show.erb
+++ b/views/databases/show.erb
@@ -1,2 +1,6 @@
-<span class="breadcrumb"><a href="/databases">databases</a> / <span class="breadcrumb-current"><%= @db_name %></span></span>
+<span class="breadcrumb">
+  <a href="/databases">databases</a> /
+  <span class="breadcrumb-current"><%= @db_name %></span>
+</span>
+
 <%= @tables_html %>
