--- a/views/seeds/index.erb
+++ b/views/seeds/index.erb
@@ -7,4 +7,6 @@
 
 <%= @table_html %>
 
-<a href="/databases/<%= @db_name %>/<%= @table_name %>/seeds/new">NEW SEED</a>
+<hr>
+
+<a class="button" href="/databases/<%= @db_name %>/<%= @table_name %>/seeds/new">NEW SEED</a>
