--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -39,14 +39,23 @@ a {
   text-transform: uppercase;
 }
 
-.button {
-  border: 3px dodgerblue solid;
-  cursor: pointer;
+.button, label, input {
   display: inline-block;
   font-size: 24px;
   margin: 12px;
-  padding: 5px 7px;
   text-decoration: none;
+}
+
+.button, label {
+  padding: 5px 7px;
+}
+
+.button, input {
+  border: 3px dodgerblue solid;
+}
+
+.button {
+  cursor: pointer;
 }
 
 .no-data {
@@ -57,6 +66,11 @@ a {
 
 #container {
   padding: 30px;
+}
+
+input {
+  color: dodgerblue;
+  padding: 3px;
 }
 
 hr {
