--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -30,7 +30,6 @@ a {
 .breadcrumb {
   display: inline-block;
   font-size: 24px;
-  margin-bottom: 40px;
 }
 
 .breadcrumb-current {
@@ -46,16 +45,13 @@ a {
   text-decoration: none;
 }
 
-.button, label {
-  padding: 5px 7px;
-}
-
 .button, input {
   border: 3px dodgerblue solid;
 }
 
 .button {
   cursor: pointer;
+  padding: 5px;
 }
 
 .no-data {
@@ -74,8 +70,8 @@ input {
 }
 
 hr {
-  border-color: dodgerblue;
-  margin: 25px 0px 15px 0px;
+  border: 1px dodgerblue solid;
+  margin: 25px 0px 25px 0px;
 }
 
 
