adding inputs for each seed setting file path on seeds/new page

--- a/views/seeds/new.erb
+++ b/views/seeds/new.erb
@@ -11,4 +11,6 @@
 <form action="/databases/<%= @db_name %>/<%= @table_name %>/seeds" method="post">
   <label for="seed_name">Seed Name:</label>
     <input id="seed_name" type="text" name="seed_name" />
+
+  <%= @table_html %>
 </form>
