added comments to show template extents in source html

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -9,7 +9,13 @@
   </head>
   <body>
     <div id="container">
+
+      <!-- template -->
+
       <%= yield %>
+
+      <!-- template -->
+
     </div>
   </body>
 </html>
