changing name of template marking comments

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,11 +10,11 @@
   <body>
     <div id="container">
 
-      <!-- template -->
+      <!-- template start -->
 
       <%= yield %>
 
-      <!-- template -->
+      <!-- template end -->
 
     </div>
   </body>
