moving seeds/new form genereation to view from controller

--- a/views/seeds/new.erb
+++ b/views/seeds/new.erb
@@ -8,9 +8,4 @@
 
 <hr>
 
-<form action="/databases/<%= @db_name %>/<%= @table_name %>/seeds" method="post">
-  <label for="seed_name">Seed Name:</label>
-    <input id="seed_name" type="text" name="seed_name" />
-
-  <%= @table_html %>
-</form>
+<%= erb(:'seeds/partials/seed_new_edit_form') %>
