added link to show route on index page

--- a/views/seeds/index.erb
+++ b/views/seeds/index.erb
@@ -15,7 +15,7 @@
 
     row_data = {
       id: seed.id,
-      seed_name: seed.name,
+      seed_name: "<a href='/databases/#{@db_name}/#{@table_name}/seeds/#{seed.id}'>#{seed.name}</a>"
     }
 
     seed.settings.each do |setting|
