--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -61,6 +61,16 @@ a {
   font-style: italic;
 }
 
+.seed-setting {
+  font-size: 20px;
+  padding: 5px;
+}
+
+.seed-setting-column {
+  font-size: 24px;
+  font-weight: bold;
+}
+
 #container {
   padding: 30px;
 }
