--- a/views/seeds/show.erb
+++ b/views/seeds/show.erb
@@ -7,3 +7,15 @@
 </span>
 
 <hr>
+
+<%@table_data = @seed.settings.each do |setting| %>
+  <p class="seed-setting"><span class="seed-setting-column"><%= setting.target_column %></span> : <%= setting.source_file %>
+<% end %>
+
+<hr>
+
+<form action='<%= "/databases/#{@db_name}/#{@table_name}/seeds/#{@seed.id}/run" %>' method="post">
+  <label for="number-of-runs">Number of runs:</label>
+    <input id="number-of-runs" type="number" min="0" step="1" name="number-of-runs" />
+  <input class="button" type="submit" value="GO!" />
+</form>
