--- a/views/seeds/show.erb
+++ b/views/seeds/show.erb
@@ -15,7 +15,7 @@
 <hr>
 
 <form action='<%= "/databases/#{@db_name}/#{@table_name}/seeds/#{@seed.id}/run" %>' method="post">
-  <label for="number-of-runs">Number of runs:</label>
-    <input id="number-of-runs" type="number" min="0" max="100" step="1" name="number-of-runs" />
+  <label for="number_of_runs">Number of runs:</label>
+    <input id="number_of_runs" type="number" min="0" max="100" step="1" name="number_of_runs" />
   <input class="button" type="submit" value="GO!" />
 </form>
