--- a/views/seeds/partials/seed_new_edit_form.erb
+++ b/views/seeds/partials/seed_new_edit_form.erb
@@ -5,14 +5,14 @@
   <table>
     <thead>
       <tr>
-        <th>Column</th>
+        <th>Column Name</th>
         <th>Data File</th>
       </tr>
     </thead>
     <tbody>
       <% @target_columns.each do |target_column| %>
       <tr>
-        <td><%= target_column %></td>
+        <td><%= target_column %> :</td>
         <td>
           <select name="<%= target_column %>">
             <% @file_names.each do |file_name| %>
