--- a/views/seeds/partials/seed_new_edit_form.erb
+++ b/views/seeds/partials/seed_new_edit_form.erb
@@ -4,9 +4,12 @@
 
   <table>
     <thead>
-      <tr>
+      <tr class="header-row">
         <th>Column Name</th>
         <th>Data File</th>
+        <th>Selected Values</th>
+        <th>Max</th>
+        <th>Min</th>
       </tr>
     </thead>
     <tbody>
@@ -20,6 +23,9 @@
             <% end %>
           </select>
         </td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
       <% end %>
     </tbody>
