--- a/views/seeds/partials/seed_new_edit_form.erb
+++ b/views/seeds/partials/seed_new_edit_form.erb
@@ -17,7 +17,7 @@
       <tr>
         <td><%= target_column %> :</td>
         <td>
-          <select name="<%= target_column %>">
+          <select name="source_file_<%= target_column %>">
             <% @file_names.each do |file_name| %>
               <option value="<%= file_name %>"><%= file_name %></option>
             <% end %>
