changed Database.columns_for_table to return column_name and data_type

--- a/views/seeds/partials/seed_new_edit_form.erb
+++ b/views/seeds/partials/seed_new_edit_form.erb
@@ -13,7 +13,8 @@
       </tr>
     </thead>
     <tbody>
-      <% @target_columns.each do |target_column| %>
+      <% @target_columns_data.each do |target_column_data| %>
+      <% target_column = target_column_data['column_name'] %>
       <tr>
         <td><%= target_column %> :</td>
         <td>
