--- a/views/seeds/partials/seed_new_edit_form.erb
+++ b/views/seeds/partials/seed_new_edit_form.erb
@@ -7,27 +7,32 @@
       <tr class="header-row">
         <th>Column Name</th>
         <th>Data File</th>
-        <th>Selected Values</th>
         <th>Max</th>
         <th>Min</th>
       </tr>
     </thead>
     <tbody>
       <% @target_columns_data.each do |target_column_data| %>
-      <% target_column = target_column_data['column_name'] %>
-      <tr>
-        <td><%= target_column %> :</td>
-        <td>
-          <select name="source_file_<%= target_column %>">
-            <% @file_names.each do |file_name| %>
-              <option value="<%= file_name %>"><%= file_name %></option>
-            <% end %>
-          </select>
-        </td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
+        <% target_column = target_column_data['column_name'] %>
+        <tr>
+          <td><%= target_column %> :</td>
+          <%
+          if target_column_data['data_type'] == 'character varying'
+            disabled = ""
+          else
+            disabled = "disabled"
+          end
+          %>
+          <td>
+            <select name="source_file_<%= target_column %>" <%= disabled %>>
+              <% @file_names.each do |file_name| %>
+                <option value="<%= file_name %>"><%= file_name %></option>
+              <% end %>
+            </select>
+          </td>
+          <td></td>
+          <td></td>
+        </tr>
       <% end %>
     </tbody>
   </table>
