--- a/views/seeds/partials/seed_new_edit_form.erb
+++ b/views/seeds/partials/seed_new_edit_form.erb
@@ -15,7 +15,7 @@
       <% @target_columns_data.each do |target_column_data| %>
         <% target_column = target_column_data['column_name'] %>
         <tr>
-          <td><%= target_column %> :</td>
+          <td class="seed-setting-column"><%= target_column %> :</td>
           <%
           if target_column_data['data_type'] == 'character varying'
             source_file_disabled = ""
@@ -40,11 +40,15 @@
           <td>
             <input type="number" name="number_max_<%= target_column %>" min="0" step="1" <%= number_disabled %>>
           </td>
-          <td></td>
+          <td>
+            <input type="number" name="number_min_<%= target_column %>" min="0" step="1" <%= number_disabled %>>
+          </td>
         </tr>
       <% end %>
     </tbody>
   </table>
+
+<hr>
 
   <input class="button" type="submit" value="Submit" />
 </form>
