min and max now saved against seed settings on seeds/create route

--- a/views/seeds/partials/seed_new_edit_form.erb
+++ b/views/seeds/partials/seed_new_edit_form.erb
@@ -38,10 +38,10 @@
           end
           %>
           <td>
-            <input type="number" name="number_max_<%= target_column %>" min="0" step="1" <%= number_disabled %>>
+            <input type="number" name="max_<%= target_column %>" min="0" step="1" <%= number_disabled %>>
           </td>
           <td>
-            <input type="number" name="number_min_<%= target_column %>" min="0" step="1" <%= number_disabled %>>
+            <input type="number" name="min_<%= target_column %>" min="0" step="1" <%= number_disabled %>>
           </td>
         </tr>
       <% end %>
