--- a/views/seeds/partials/seed_new_edit_form.erb
+++ b/views/seeds/partials/seed_new_edit_form.erb
@@ -7,8 +7,8 @@
       <tr class="header-row">
         <th>Column Name</th>
         <th>Data File</th>
-        <th>Max</th>
         <th>Min</th>
+        <th>Max</th>
       </tr>
     </thead>
     <tbody>
@@ -32,16 +32,16 @@
           </td>
           <%
           if target_column_data['data_type'] == 'integer'
-            number_disabled = ""
+            number_attributes = "required"
           else
-            number_disabled = "disabled"
+            number_attributes = "disabled"
           end
           %>
           <td>
-            <input type="number" name="max_<%= target_column %>" min="0" step="1" <%= number_disabled %>>
+            <input type="number" name="min_<%= target_column %>" min="0" step="1" <%= number_attributes %>>
           </td>
           <td>
-            <input type="number" name="min_<%= target_column %>" min="0" step="1" <%= number_disabled %>>
+            <input type="number" name="max_<%= target_column %>" min="0" step="1" <%= number_attributes %>>
           </td>
         </tr>
       <% end %>
