adding dispaly of numbers to seeds/show page

--- a/views/seeds/show.erb
+++ b/views/seeds/show.erb
@@ -9,7 +9,7 @@
 <hr>
 
 <%@table_data = @seed.settings.each do |setting| %>
-  <p class="seed-setting"><span class="seed-setting-column"><%= setting.target_column %></span> : <%= setting.source_file %>
+  <p class="seed-setting"><span class="seed-setting-column"><%= setting.target_column %></span> : <%= setting.to_s %>
 <% end %>
 
 <hr>
