minor refactoring for clarity

--- a/views/seeds/partials/seed_new_edit_form.erb
+++ b/views/seeds/partials/seed_new_edit_form.erb
@@ -9,6 +9,7 @@
         <th>Data File</th>
         <th>Min</th>
         <th>Max</th>
+        <th>Boolean</th>
       </tr>
     </thead>
     <tbody>
