--- a/views/seeds/partials/seed_new_edit_form.erb
+++ b/views/seeds/partials/seed_new_edit_form.erb
@@ -32,7 +32,7 @@
               </select>
             </td>
           <% else %>
-            <td></td>
+            <td class="inactive-cell"></td>
           <% end %>
 
           <!-- MIN AND MAX -->
@@ -55,8 +55,8 @@
 
           <% else %>
 
-            <td></td>
-            <td></td>
+            <td class="inactive-cell"></td>
+            <td class="inactive-cell"></td>
 
           <% end %>
 
@@ -73,7 +73,7 @@
 
           <% else %>
 
-            <td></td>
+            <td class="inactive-cell"></td>
 
           <% end %>
         </tr>
