--- a/views/seeds/show.erb
+++ b/views/seeds/show.erb
@@ -16,6 +16,6 @@
 
 <form action='<%= "/databases/#{@db_name}/#{@table_name}/seeds/#{@seed.id}/run" %>' method="post">
   <label for="number_of_runs">Number of runs:</label>
-    <input id="number_of_runs" type="number" min="0" max="100" step="1" name="number_of_runs" />
+    <input id="number_of_runs" type="number" min="0" max="100" step="1" name="number_of_runs" required/>
   <input class="button" type="submit" value="GO!" />
 </form>
