--- a/views/seeds/show.erb
+++ b/views/seeds/show.erb
@@ -8,8 +8,8 @@
 
 <hr>
 
-<%@table_data = @seed.settings.each do |setting| %>
-  <p class="seed-setting"><span class="seed-setting-column"><%= setting.target_column %></span> : <%= setting.to_s %>
+<% @seed.settings.each do |setting| %>
+  <p class="seed-setting"><span class="seed-setting-column"><%= "#{setting.target_column} (#{setting.target_data_type})" %></span> : <%= setting.to_s %>
 <% end %>
 
 <hr>
