--- a/views/seeds/new.erb
+++ b/views/seeds/new.erb
@@ -1,10 +1,6 @@
-<span class="breadcrumb">
-  <a href="/databases">databases</a> /
-  <a href="/databases/<%= @db_name %>"><%= @db_name %></a> /
-  <%= @table_name %> /
-  <a href="/databases/<%= @db_name %>/<%= @table_name %>/seeds">seeds</a> /
-  <span class="breadcrumb-current">new</span>
-</span>
+<% @current_path = :seeds %>
+<% @current_route = :new %>
+<%= erb(:'partials/breadcrumb') %>
 
 <hr>
 
