--- a/views/seeds/partials/seed_new_edit_form.erb
+++ b/views/seeds/partials/seed_new_edit_form.erb
@@ -1,4 +1,4 @@
-<form action="/databases/<%= @db_name %>/<%= @table_name %>/seeds" method="post">
+<form action="/databases/<%= @db_name %>/tables/<%= @table_name %>/seeds" method="post">
   <label for="seed_name">Seed Name:</label>
     <input id="seed_name" type="text" name="seed_name" required />
 
