--- a/views/tables/index.erb
+++ b/views/tables/index.erb
@@ -1,5 +1,6 @@
-<% @current_path = :databases %>
+<% @current_path = :tables %>
 <% @current_route = :index %>
+
 <%= erb(:'partials/breadcrumb') %>
 
 <hr>
