added data/index page

--- a/views/partials/breadcrumb.erb
+++ b/views/partials/breadcrumb.erb
@@ -2,7 +2,8 @@
 path_indices = {
   databases: 1,
   tables: 2,
-  seeds: 3
+  seeds: 3,
+  data: 3
 }
 
 current_path_index = path_indices[@current_path]
