--- a/views/seeds/index.erb
+++ b/views/seeds/index.erb
@@ -19,7 +19,7 @@
   end
 
   run_href = "/databases/#{@db_name}/tables/#{@table_name}/seeds/#{seed.id}"
-  row_data[:run_seed] = HtmlElement.new( 'a', "run", { href: run_href } ))
+  row_data[:run_seed] = HtmlElement.new( 'a', "run", { href: run_href } )
 
   @table_data.push( row_data )
 end
