--- a/views/partials/table.erb
+++ b/views/partials/table.erb
@@ -6,7 +6,7 @@
       <tr class="header-row">
         <% column_names = [] %>
         <% @table_data.first.keys.each do |column_name| %>
-          <% header_data = @table_headers[column_name] if @header_data != nil%>
+          <% header_data = @table_headers[column_name] if @table_headers != nil%>
           <% column_title = column_name %>
           <% column_title = header_data if header_data != nil %>
           <th><%= column_title %></th>
