--- a/views/partials/table.erb
+++ b/views/partials/table.erb
@@ -1,12 +1,13 @@
 <% if @table_data.empty? %>
   <%= erb(:'partials/no_data_message') %>
 <% else %>
+  <% table_headers = @table_data.first.to_titles() %>
   <table>
     <thead>
       <tr class="header-row">
         <% column_names = [] %>
         <% @table_data.first.keys.each do |column_name| %>
-          <% header_data = @table_headers[column_name] if @table_headers != nil%>
+          <% header_data = table_headers[column_name] %>
           <% column_title = column_name %>
           <% column_title = header_data if header_data != nil %>
           <th><%= column_title %></th>
