--- a/views/data/index.erb
+++ b/views/data/index.erb
@@ -5,3 +5,12 @@
 <hr>
 
 <%= erb(:'partials/table') %>
+
+<hr>
+
+<% form_action = "/databases/#{@db_name}/tables/#{@table_name}/data" %>
+
+<form action="<%= form_action %>" method="post">
+  <input class="button" type="submit" value="Delete All Data" />
+  <input type="hidden" name="_method" value="delete" />
+</form>
