--- a/views/seeds/show.erb
+++ b/views/seeds/show.erb
@@ -11,6 +11,6 @@
 
 <% form_action = "/databases/#{@db_name}/tables/#{@table_name}/seeds/#{@seed.id}" %>
 <form action="<%= form_action %>" method="post">
-  <input class="button" type="submit" value="Delete Seed" />
+  <input class="button button-delete" type="submit" value="Delete Seed" />
   <input type="hidden" name="_method" value="delete" />
 </form>
