adding support for deleting rows on data/index page

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -197,3 +197,14 @@ td {
   background-color: lightpink;
   color: red;
 }
+
+.table-delete {
+  border: none;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.table-delete:hover {
+  background-color: lightpink;
+  color: red;
+}
