repeating 'delete all' and 'view seeds' buttons at top

--- a/views/data/index.erb
+++ b/views/data/index.erb
@@ -4,6 +4,18 @@
 
 <hr>
 
+<% form_action = "/databases/#{@db_name}/tables/#{@table_name}/data" %>
+
+<form style="display: inline-block" action="<%= form_action %>" method="post">
+  <input class="button button-delete" type="submit" value="Delete All Data" />
+  <input type="hidden" name="_method" value="delete" />
+</form>
+
+<% seeds_href = "/databases/#{@db_name}/tables/#{@table_name}/seeds" %>
+<a class="button" href="<%= seeds_href %>">View Seeds</a>
+
+<hr>
+
 <%= erb(:'partials/table') %>
 
 <hr>
