--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -178,11 +178,13 @@ td {
 .home-button, .home-button:visited {
   color: white;
   background-color: dodgerblue;
+  border: 5px solid white;
   border-color: white;
   font-size: 55px;
-  margin-top: 100px;
+  margin-top: 50px;
   padding: 30px;
   border-radius: 20px;
+  display: inline-block;
 }
 
 .home-button:hover {
