--- a/views/data/new.erb
+++ b/views/data/new.erb
@@ -12,3 +12,6 @@
 </form>
 
 <hr>
+
+<% new_href = "/databases/#{@db_name}/tables/#{@table_name}/data" %>
+<a class="button" href="<%= new_href %>">Cancel</a>
