--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,7 +2,7 @@ body {
   font-family: monospace;
 }
 
-body, a {
+body, a, input {
   color: dodgerblue;
 }
 
@@ -51,12 +51,18 @@ a {
 }
 
 .button {
+  border: 2px dodgerblue solid;
   cursor: pointer;
-  padding: 10px;
-  font-size: 25px;
+  padding: 4px;
+  font-size: 20px;
   font-family: monospace;
-  box-sizing: content-box;
-  height: 25px;
+  box-sizing: border-box;
+  height: 40px;
+  text-decoration: none;
+}
+
+a.button {
+  padding-top: 8px;
 }
 
 .no-data {
@@ -204,9 +210,26 @@ td {
   border: none;
   text-decoration: underline;
   cursor: pointer;
+  font-size: 18px;
 }
 
 .table-delete:hover {
   background-color: lightpink;
   color: red;
+}
+
+.new-form-input, #new-form-create {
+  border: 1.5px solid dodgerblue;
+  color: dodgerblue;
+  font-size: 16px;
+  padding = 1px;
+}
+
+#new-form-create {
+  border-width: 2px;
+  cursor: pointer;
+}
+
+#new-form-create:hover {
+  background-color: lightblue;
 }
