--- a/views/home.erb
+++ b/views/home.erb
@@ -1,5 +1,5 @@
 <div class="home-div">
-  <p class="home-p">Welcome to DoDaS</p>
-  <p class="home-p home-subtitle">the Dodgerblue Database Seeding tool</p>
+  <p class="home-p">Welcome to <span class="home-highlight">DoDaS</span></p>
+  <p class="home-p home-subtitle">the <span class="home-highlight">Do</span>dgerblue <span class="home-highlight">Da</span>tabase <span class="home-highlight">S</span>eeding tool</p>
   <a class="home-button" href="/databases">Click to begin</a>
 </div>
